[metadata]
name = great_countdown
version = 1.0
author = Qyutou
author_email = qyutou@gmail.com
description = Simple command-line countdown written on python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
project_urls =
    = https://github.com/Qyutou/great_countdown

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requirements = 
    Click

[options.entry_points]
console_scripts =
    countdown = great_countdown.main:great_countdown

[options.packages.find]
where = src
